--- a/src/EditorExtension/Interaction/IntellisenseWindow/IntelliSenseControl.xaml
+++ b/src/EditorExtension/Interaction/IntellisenseWindow/IntelliSenseControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Meerkatalyst.Lonestar.EditorExtension.Interaction.IntellisenseWindow.Selection"
+﻿<UserControl x:Class="Meerkatalyst.Lonestar.EditorExtension.Interaction.IntellisenseWindow.IntelliSenseControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
